# dialogue_as

./: CMakeLists.txt  README.md  package.xml
action/: dialogue_action.action
src/: main.cpp  test.cpp  test_verb_subject.cpp  test_yes_no.cpp
